discussion/kv_engine/169745/169745_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50600: Use KVStoreRevision in prepareToDelete et. al.

Magma and couchstore vBuckets deal with revisioning slightly differently
if an item has not yet been written to a vBucket. Nexus needs to be able
to deal with that when we delete a vBucket revision as currently it tries
to delete the revision of the primary KVStore on the secondary. This may
fail if the KVStores revisions are not the same. Add a KVStoreRevision
class which wraps the uint64_t revision value to allow NexusKVStore to
use polymorphism to return a child type containing both revisions in a
future change.

Change-Id: I6ffe388da3744d8a439f3e989602ce08cb7ae17b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-02-01 11:34:45.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-01 12:04:00.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15240/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucketdeletiontask.cc:94:5: error: cannot initialize object parameter of type "VBucketMemoryDeletionTask" with an expression of type "VBucketMemoryAndDiskDeletionTask" [clang-diagnostic-error]
    notifyAllPendingConnsFailed(false);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucketdeletiontask.h:90:21: error: use of undeclared identifier "KVStoreRevision" [clang-diagnostic-error]
    std::unique_ptr<KVStoreRevision> vbDeleteRevision;
                    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15240/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucketdeletiontask.cc:94:5:
error: cannot initialize object parameter of type "VBucketMemoryDeletionTask" with an expression of type "VBucketMemoryAndDiskDeletionTask" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15240/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36691/ : FAILURE

CMake error: CMakeLists.txt:134 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36691/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/vbucketdeletiontask.h:90:21:
error: use of undeclared identifier "KVStoreRevision"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36691/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16061/ : FAILURE

Failure of GoogleTest "TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonNo_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonNo_SnappyYes
[2022-02-01T11:49:20.569Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@6/kv_engine/tests/testapp/testapp_xattr.cc:1935: Failure
[2022-02-01T11:49:20.569Z] Value of: resp.isSuccess()
[2022-02-01T11:49:20.569Z]   Actual: false
[2022-02-01T11:49:20.569Z] Expected: true
[2022-02-01T11:49:20.569Z] Expected to be able to store system xattrs
[2022-02-01T11:49:20.569Z] [  FAILED  ] TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonNo_SnappyYes, where GetParam() = (Mcbp, XattrYes, 4-byte object <01-00 00-00>, 4-byte object <00-00 00-00>) (160 ms)
TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonNo_SnappyYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16061/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16951/ : FAILURE

Compile error at [2022-02-01T11:41:33.949Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/vbucketdeletiontask.h:90:21:
error: ?KVStoreRevision? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16951/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4953/ : FAILURE

Compile error at [2022-02-01T11:42:44.182Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@5/kv_engine/engines/ep/src/vbucketdeletiontask.h:90:21:
error: ?KVStoreRevision? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4953/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17271/ : FAILURE

Compile error at [2022-02-01T11:45:41.894Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/vbucketdeletiontask.h:90:21:
error: ?KVStoreRevision? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17271/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14084/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43471/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4892/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18016/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25366/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
